--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
      </p>
 
   <div class="buttons">
-    <a href="https://drive.google.com/uc?export=download&id=1EZ3IvBoGyAQGMMOGJg1A46X46a4-5bKs" class="button">Download</a>
+    <a href="https://drive.google.com/file/d/1wrjR09Jo7OpaHTYSZw_PQfWd-QTsi7Dl" class="button">Download</a>
     <a href="#" class="button">Docs</a>
     <a href="#" class="button">Source</a>
   </div>
